tests/conformance/negative/bad_constraint_text.afr
function needsText<T>(x T) returns T where T is text
    return x
end
create bad = needsText(1)
